add CORS, add verificationMethod